2009-06-09  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_pf_writers.cpp (PrintRule::_printSrcPort): fixed bug
	#2803702 "NAT rule with source port range in TSrv is broken for
	PF".  NAT rules matching source port ranges and translating source
	port ranges should be possible.

	* NATCompiler.cpp (classifyNATRule::processNext): (change in
	libfwbuilder) fixed bug #2803689 "NAT rule matching dport but
	chaning sport is broken".  NAT rules that match destination port
	but translate source port should be possible (and the opposite
	too).

2009-06-08  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (splitSDNATRule::processNext): Improved
	support for NAT rules that translate both source and destination:
	now a rule like this can translate both source and destination
	addresses and at the same time source and destination port ranges.
	Compiler generates two iptables commands, one with SNAT and
	another with DNAT translation for a rule like this.

	* PolicyCompiler_ipt.cpp (checkForDynamicInterfacesOfOtherObjects::findDynamicInterfaces):
	Using Compiler::abort() instead of throwing exception on all error
	conditions in the compiler.

	* NATCompiler_PrintRule.cpp (PrintRule::processNext): Added
	support for SNAT rules that translate only source port of udp or
	tcp packets. This rule generate "-j SNAT --to-source :<port>"
	with no address part.

2009-06-06  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf.cpp (PolicyCompiler_pf::compile): fixed
	bug (no #): compiler for PF did not remove rules using IPv4
	objects while compiling policy set to be "combined IPv4 and IPv6"
	for IPv6 and vice versa. As the result, it used to double some
	rules because the would appear both in IPv4 and IPv6 sections of
	generated .conf file.

2009-06-05  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printIP): fixed bug
	#2801548 "fwb_ipt should issue error for ipsrv with options for
	ipv6". Since IP options lsrr, ssrr, rr do not exist in ipv6,